# DesignPatternsPython

./: .gitignore  README.rst  pyproject.toml
designpatternspython/: __init__.py
designpatternspython/Creational/AbstractFactory/: CatFactory.py  DogFactory.py  PetStore.py  __init__.py
designpatternspython/Creational/Factory/: Factory.py
designpatternspython/Creational/Singleton/: Borg.py  Singleton.py  __init__.py
designpatternspython/Objects/: Cat.py  Dog.py
tests/: test_designpatternspython.py
